Update EZSTATES testing architecture
Updated EZSTATES testing to include testFX, to
facilitate UI testing.

Updated build.gradle script to run uiTest when
appropriate. It is only appropriate to run
uiTest on Windows and macOS.

Added uiTest.yml to facilitate UI testing on
Github Actions.