@@ -22,11 +22,51 @@ checkstyle {
 
 test {
     useJUnitPlatform()
-    jvmArgs += ['--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED']
+
+    // Enhance logging for failed tests
+    testLogging {
+        events "failed"
+        exceptionFormat = "short"
+        showStandardStreams = true
+    }
+
+    doFirst {
+        exclude "**/**UiTest*"
+    }
+    reports {
+        html.required = true
+    }
+    doLast {
+        def testReportPath = "${buildDir}/reports/tests/test/index.html"
+        println "\nTest report generated at: file:///${testReportPath}"
+    }
     finalizedBy jacocoTestReport
 }
 
-task coverage(type: JacocoReport) {
+tasks.register('uiTest', Test) {
+    jvmArgs += [
+            '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+            '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+            '--add-opens', 'javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    ]
+    doFirst {
+        include "**/**UiTest*"
+    }
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+
+    def disallowedOS = ['ubuntu', 'nux']
+    def os = System.getProperty("os.name").toLowerCase()
+    def isAllowed = disallowedOS.every { !os.contains(it) }
+    if (isAllowed) {
+        dependsOn uiTest
+    }
     sourceDirectories.from files(sourceSets.main.allSource.srcDirs)
     classDirectories.from files(sourceSets.main.output)
     executionData.from files(jacocoTestReport.executionData)
@@ -39,27 +79,15 @@ task coverage(type: JacocoReport) {
         html.required = true
         xml.required = true
     }
+    doLast {
+        // Print the path to the HTML report in the terminal
+        def reportPath = "${buildDir}/reports/jacoco/test/html/index.html"
+        println "\nTest coverage report generated at: file:///${reportPath}"
+    }
 }
 
-// Specialized task to run only UI-related unit tests
-tasks.register('uiTest', Test) {
-    doFirst {
-        // Include only UI-related tests
-        include "**/**UiTest*"
-    }
-    useJUnitPlatform()
-    finalizedBy jacocoTestReport
-}
-
-jacocoTestReport {
-    dependsOn test
-    // Only run the UI tests when on macOS or Windows
-    def disallowedOSes = ['ubuntu', 'nux']
-    def os = System.getProperty("os.name").toLowerCase()
-    def isAllowed = disallowedOSes.every { !os.contains(it) }
-    if (isAllowed) {
-        dependsOn uiTest
-    }
+task coverage(type: JacocoReport) {
+    dependsOn jacocoTestReport
 }
 
 dependencies {
@@ -83,7 +111,9 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.7.4'
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: jUnitVersion
-    testImplementation 'org.testfx:testfx-junit5:4.0.16-alpha'
+    testImplementation "org.testfx:testfx-core:4.0.17"
+    testImplementation "org.testfx:testfx-junit5:4.0.17"
+    testImplementation 'org.hamcrest:hamcrest:2.2'
 
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: jUnitVersion
 }
